tests/snapshots/snapshots__budget_python_dotenv_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 0 (12 words)

CHANGELOG.md
CONTRIBUTING.md
README.md
docs/reference.md
src/dotenv/__init__.py
src/dotenv/__main__.py
src/dotenv/cli.py
src/dotenv/ipython.py
src/dotenv/main.py
src/dotenv/parser.py
src/dotenv/variables.py
src/dotenv/version.py
